2006-06-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* make/mutopia-rules.make ($(outdir)/%.png $(outdir)/%.pdf
	$(outdir)/%.ly $(outdir)/%.ps): dump sigs for normal files too.

	* stepmake/aclocal.m4: robuster version detection.

2006-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Robustification for (gcc) version detection.

	* cygwin/postinstall-lilypond.sh: Do not fail if info docs aren't
	available.  This should be moved to postinstall-lilypond-doc.

2006-06-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/ledger-line-engraver.cc (acknowledge_staff_symbol): only
	create new spanner for non-null left bounded staff symbol.
	
	* lily/ledger-line-spanner.cc (set_spacing_rods): suicide if no staff.

2006-05-31  Erlend Aasland  <erlenda@gmail.com>

	* dynamic-engraver.cc: fix bug (dynamics collide with accidentals)

2006-05-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/lilypond-book.py (Lilypond_file_snippet.ly): strip
	version number.
	(PREAMBLE_LY): copy from -devel branch.

	* VERSION (PATCH_LEVEL): bump to .4

	* lily/parser.yy (simple_markup): replace THIS with PARSER.

	* ly/Welcome-to-LilyPond-MacOS.ly: include in LilyPond, so version
	number stays up to date.
	
	* buildscripts/output-distance.py
	(ComparisonData.create_html_result_page): new routine: summarise
	results in HTML page with images. 
	(ComparisonData.create_text_result_page): create summary text files too.

	* GNUmakefile.in (web-ext): package .signature files too. They
	compress well. 

	* scm/stencil.scm (write-system-signature): typo.

	* GNUmakefile.in: create web-root/VERSION to help upload scripts.

	* scm/stencil.scm (write-system-signature): better escaping.
	only write signature for music systems, not for markup systems.

	* scm/framework-ps.scm (output-framework): dump-signatures support
	for plain output.

	* make/lilypond-vars.make (LILYPOND_BOOK_FLAGS): add -ddump-signatures.

	* scm/framework-ps.scm (write-preamble): redefine mark_URI to nop